Add IntelliJ LSP Support