@@ -43,15 +43,14 @@ import java.io.File;
 import java.io.FileFilter;
 import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.Charset;
 import java.nio.file.AccessDeniedException;
 import java.util.*;
 
 /**
- * https://github.com/ignatov/intellij-erlang/blob/master/jps-plugin/src/org/intellij/erlang/jps/builder/ErlangBuilder.java
- * https://github.com/ignatov/intellij-erlang/tree/master/jps-plugin/src/org/intellij/erlang/jps/rebar
+ * <a href="https://github.com/ignatov/intellij-erlang/blob/master/jps-plugin/src/org/intellij/erlang/jps/builder/ErlangBuilder.java">...</a>
+ * <a href="https://github.com/ignatov/intellij-erlang/tree/master/jps-plugin/src/org/intellij/erlang/jps/rebar">...</a>
  */
 public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
     public static final String BUILDER_NAME = "Elixir Builder";
@@ -104,7 +103,7 @@ public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
         JpsSdk<SdkProperties> sdk = BuilderUtil.getSdk(context, module);
 
         for (String contentRootUrl : module.getContentRootsList().getUrls()) {
-            String contentRootPath = new URL(contentRootUrl).getPath();
+            String contentRootPath = URI.create(contentRootUrl).getPath();
             File contentRootDir = new File(contentRootPath);
             File mixConfigFile = new File(contentRootDir, MIX_CONFIG_FILE_NAME);
             if (!mixConfigFile.exists()) continue;
@@ -179,15 +178,13 @@ public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
             return getCompileFilePathsDefault(module, target);
         }
 
-        List<String> absolutePathList = new ArrayList<>(absolutePaths);
-
         // force build files
-        return absolutePathList;
+        return new ArrayList<>(absolutePaths);
     }
 
     @NotNull
     private static List<String> getCompileFilePathsDefault(@NotNull JpsModule module, @NotNull Target target) {
-        CommonProcessors.CollectProcessor<File> exFilesCollector = new CommonProcessors.CollectProcessor<File>() {
+        CommonProcessors.CollectProcessor<File> exFilesCollector = new CommonProcessors.CollectProcessor<>() {
             @Override
             protected boolean accept(File file) {
                 return !file.isDirectory() && FileUtilRt.extensionEquals(file.getName(), ELIXIR_SOURCE_EXTENSION);
@@ -235,8 +232,7 @@ public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
         addedModules.add(module);
 
         for (JpsDependencyElement dependency : module.getDependenciesList().getDependencies()) {
-            if (!(dependency instanceof JpsModuleDependency)) continue;
-            JpsModuleDependency moduleDependency = (JpsModuleDependency) dependency;
+            if (!(dependency instanceof JpsModuleDependency moduleDependency)) continue;
             JpsModule depModule = moduleDependency.getModule();
             if (depModule != null) {
                 collectDependentModules(depModule, addedModules, addedModuleNames);
@@ -253,9 +249,9 @@ public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
         commandLine.addParameters(ADD_PATH_TO_FRONT_OF_CODE_PATH, outputDirectory.getPath());
         for (String rootUrl : module.getContentRootsList().getUrls()) {
             try {
-                String path = new URL(rootUrl).getPath();
+                String path = URI.create(rootUrl).getPath();
                 commandLine.addParameters(ADD_PATH_TO_FRONT_OF_CODE_PATH, path);
-            } catch (MalformedURLException e) {
+            } catch (IllegalArgumentException e) {
                 context.processMessage(new CompilerMessage(ElIXIRC_NAME, BuildMessage.Kind.ERROR, "Failed to find content root for module: " + module.getName()));
             }
         }
@@ -279,23 +275,9 @@ public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
         }
     }
 
-    /*** doBuildWithMix related private methods */
-
-    @Nullable
-    private static String elixirSdkToElixirExePath(@NotNull JpsSdk elixirSdk) {
-        String elixirHomePath = elixirSdk.getHomePath();
-        String elixirExePath = null;
-
-        if (elixirHomePath != null) {
-            elixirExePath = Elixir.homePathToElixirExePath(elixirHomePath);
-        }
-
-        return elixirExePath;
-    }
-
     @NotNull
     private static String erlangSdkLibraryToErlExePath(@NotNull JpsLibrary erlangSdkLibrary) throws FileNotFoundException, AccessDeniedException {
-        return erlangJpsSdkToErlExePath((JpsSdk) erlangSdkLibrary.getProperties());
+        return erlangJpsSdkToErlExePath((JpsSdk<?>) erlangSdkLibrary.getProperties());
     }
 
     @NotNull
@@ -329,12 +311,12 @@ public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
     }
 
     @NotNull
-    private static String erlangJpsSdkToErlExePath(@NotNull JpsSdk erlangSdk) throws FileNotFoundException, AccessDeniedException {
+    private static String erlangJpsSdkToErlExePath(@NotNull JpsSdk<?> erlangSdk) throws FileNotFoundException, AccessDeniedException {
         String erlangHomePath = erlangSdk.getHomePath();
         return erlangHomePathToErlExePath(erlangHomePath);
     }
 
-    private static void prependCodePaths(@NotNull GeneralCommandLine commandLine, @NotNull JpsSdk sdk) {
+    private static void prependCodePaths(@NotNull GeneralCommandLine commandLine, @NotNull JpsSdk<?> sdk) {
         JpsLibrary jpsLibrary = sdk.getParent();
         List<JpsLibraryRoot> compiledRoots = jpsLibrary.getRoots(JpsOrderRootType.COMPILED);
 
@@ -343,7 +325,7 @@ public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
 
             assert url.startsWith(URL_PREFIX);
 
-            String path = url.substring(URL_PREFIX.length(), url.length());
+            String path = url.substring(URL_PREFIX.length());
 
             commandLine.addParameters("-pa", path);
         }
@@ -378,7 +360,7 @@ public class Builder extends TargetBuilder<SourceRootDescriptor, Target> {
 
     private static void setErl(@NotNull GeneralCommandLine generalCommandLine,
                                @NotNull String exePath,
-                               @NotNull JpsSdk sdk) {
+                               @NotNull JpsSdk<?> sdk) {
         generalCommandLine.setExePath(exePath);
         prependCodePaths(generalCommandLine, sdk);
     }
